--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,17 +38,15 @@ jobs:
     - name: Install dependencies
       run: |
         uv venv
-        source .venv/bin/activate
         uv pip install -e ".[dev]"
         
     - name: Run unit tests
       run: |
-        source .venv/bin/activate
-        pytest tests/test_data_stats.py tests/test_drift_check.py -v --tb=short
+        uv run pytest tests/test_data_stats.py tests/test_drift_check.py -v --tb=short
         
     - name: Start MLflow with Docker Compose
       run: |
-        docker-compose up -d
+        docker compose up -d
         
     - name: Wait for MLflow to be ready
       run: |
@@ -66,18 +64,17 @@ jobs:
       env:
         MLFLOW_TRACKING_URI: http://localhost:5000
       run: |
-        source .venv/bin/activate
-        pytest tests/test_mlflow_integration.py -v --tb=short
+        uv run pytest tests/test_mlflow_integration.py -v --tb=short
         
     - name: Show MLflow logs on failure
       if: failure()
       run: |
-        docker-compose logs mlflow
+        docker compose logs mlflow
         
     - name: Stop MLflow
       if: always()
       run: |
-        docker-compose down -v
+        docker compose down -v
         
     - name: Upload test results
       if: always()
